index a la racine

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400 data-[active=true]:after:w-full"
               >
-                <a href="/pages/index.html">Accueil</a>
+                <a href="index.html">Accueil</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
@@ -130,7 +130,7 @@
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400 data-[active=true]:after:w-full"
             >
-              <a href="/pages/index.html">Accueil</a>
+              <a href="index.html">Accueil</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
