index a la racine update

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/output.css" />
-    <link rel="stylesheet" href="/assets/css/animation.css" />
+    <link rel="stylesheet" href="assets/css/output.css" />
+    <link rel="stylesheet" href="assets/css/animation.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -69,22 +69,22 @@
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/competences.html">Compétences</a>
+                <a href="pages/competences.html">Compétences</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/realisations.html">Réalisations</a>
+                <a href="pages/realisations.html">Réalisations</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/apropos.html">A propos</a>
+                <a href="pages/apropos.html">A propos</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/contact.html">Contact</a>
+                <a href="pages/contact.html">Contact</a>
               </li>
             </ul>
             <!-- dark mode -->
@@ -135,22 +135,22 @@
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/competences.html">Compétences</a>
+              <a href="pages/competences.html">Compétences</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/realisations.html">Réalisations</a>
+              <a href="pages/realisations.html">Réalisations</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/apropos.html">A propos</a>
+              <a href="pages/apropos.html">A propos</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/contact.html">Contact</a>
+              <a href="pages/contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -213,14 +213,14 @@
             <div
               class="space-x-3 max-md:flex max-md:flex-col max-md:items-center max-md:justify-center max-md:gap-2 max-md:space-x-0"
             >
-              <a href="../pages/realisations.html"
+              <a href="pages/realisations.html"
                 ><button
                   class="bg-indigo-900 text-gray-100 font-medium px-6 py-2 rounded-md cursor-pointer hover:bg-indigo-700 transition-all duration-500 dark:bg-orange-600 dark:hover:bg-orange-700 dark:text-gray-800 max-lg:px-3 max-lg:text-sm"
                 >
                   Voir mes réalisations
                 </button></a
               >
-              <a href="../pages/contact.html"
+              <a href="pages/contact.html"
                 ><button
                   class="border-1 border-indigo-900 text-blue-900 font-medium bg-gray-50 px-4 py-2 rounded-md cursor-pointer hover:bg-gray-200 transition-all duration-500 dark:border-0 dark:hover:bg-gray-300 dark:text-gray-900 max-lg:px-3 max-lg:text-sm"
                 >
@@ -230,7 +230,7 @@
             </div>
           </div>
           <div class="w-[38%] max-md:hidden">
-            <img src="/assets/images/index.png" alt="image d'illustration" />
+            <img src="assets/images/index.png" alt="image d'illustration" />
           </div>
         </section>
       </section>
@@ -692,7 +692,7 @@
               vocales
             </p>
             <a
-              href="/pages/realisations.html"
+              href="pages/realisations.html"
               class="text-indigo-900 dark:text-gray-200 max-md:text-sm"
               >Voir le Projet →</a
             >
@@ -753,7 +753,7 @@
               les utilisateurs dans la gestion et la planification de leur fonds
             </p>
             <a
-              href="/pages/realisations.html"
+              href="pages/realisations.html"
               class="text-indigo-900 dark:text-gray-200 max-md:text-sm"
               >voir le projet →</a
             >
@@ -798,13 +798,13 @@
               empêcher les candidats de tricher.
             </p>
             <a
-              href="/pages/realisations.html"
+              href="pages/realisations.html"
               class="text-indigo-900 dark:text-gray-200 max-md:text-sm"
               >voir le projet →</a
             >
           </div>
         </section>
-        <a href="/pages/realisations.html">
+        <a href="pages/realisations.html">
           <button
             class="text-gray-100 font-bold mt-12 py-2 px-30 bg-indigo-900 cursor-pointer rounded-[10px] hover:bg-indigo-700 transition-all duration-500 dark:bg-orange-600 dark:text-gray-800 dark:hover:bg-orange-700 max-md:px-10 max-md:text-md max-md:mt-5"
             data-aos="fade-up"
@@ -923,7 +923,7 @@
           </div>
           <!-- bouton contactez-moi  -->
           <div>
-            <a href="/pages/contact.html">
+            <a href="pages/contact.html">
               <button
                 class="text-gray-100 font-bold mt-8 py-2 px-30 bg-indigo-900 cursor-pointer rounded-[10px] hover:bg-indigo-700 transition-all duration-500 dark:bg-orange-600 dark:text-gray-800 dark:hover:bg-orange-700 max-md:px-10 max-lg:px-25"
                 data-aos="fade-up"
@@ -1221,18 +1221,18 @@
     </footer>
 
     <!-- les scripts JS  -->
-    <script src="/assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <!-- DARK MODE  -->
-    <script src="/assets/js/darkmobile.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/darkmobile.js"></script>
+    <script src="assets/js/main.js"></script>
 
     <!-- aos  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- aos init -->
-    <script src="/assets/js/aos.js"></script>
+    <script src="assets/js/aos.js"></script>
 
     <!-- menu mobile  -->
-    <script src="/assets/js/menu-mobile.js"></script>
+    <script src="assets/js/menu-mobile.js"></script>
   </body>
 </html>
