mise à jour des liens

--- a/pages/apropos.html
+++ b/pages/apropos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/output.css" />
+    <link rel="stylesheet" href="../assets/css/output.css" />
     <title>A propos</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -57,22 +57,22 @@
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/competences.html">Compétences</a>
+                <a href="competences.html">Compétences</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/realisations.html">Réalisations</a>
+                <a href="realisations.html">Réalisations</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400 data-[active=true]:after:w-full"
               >
-                <a href="/pages/apropos.html">A propos</a>
+                <a href="apropos.html">A propos</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/contact.html">Contact</a>
+                <a href="contact.html">Contact</a>
               </li>
             </ul>
             <!-- dark mode -->
@@ -121,22 +121,22 @@
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/competences.html">Compétences</a>
+              <a href="competences.html">Compétences</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/realisations.html">Réalisations</a>
+              <a href="realisations.html">Réalisations</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400 data-[active=true]:after:w-full"
             >
-              <a href="/pages/apropos.html">A propos</a>
+              <a href="apropos.html">A propos</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -501,13 +501,13 @@
     </footer>
 
     <!-- DARK MODE  -->
-    <script src="/assets/js/darkmobile.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="../assets/js/darkmobile.js"></script>
+    <script src="../assets/js/main.js"></script>
     <!-- aos  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- aos init -->
-    <script src="/assets/js/aos.js"></script>
+    <script src="../assets/js/aos.js"></script>
     <!-- menu mobile  -->
-     <script src="/assets/js/menu-mobile.js"></script>
+     <script src="../assets/js/menu-mobile.js"></script>
   </body>
 </html>
