--- a/pages/realisations.html
+++ b/pages/realisations.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/assets/css/output.css" />
+    <link rel="stylesheet" href="../assets/css/output.css" />
     <title>Mes Réalisations</title>
     <!-- aos  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -51,22 +51,22 @@
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/competences.html">Compétences</a>
+                <a href="competences.html">Compétences</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400 data-[active=true]:after:w-full"
               >
-                <a href="/pages/realisations.html">Réalisations</a>
+                <a href="realisations.html">Réalisations</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/apropos.html">A propos</a>
+                <a href="apropos.html">A propos</a>
               </li>
               <li
                 class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
               >
-                <a href="/pages/contact.html">Contact</a>
+                <a href="contact.html">Contact</a>
               </li>
             </ul>
             <!-- dark mode -->
@@ -115,22 +115,22 @@
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/competences.html">Compétences</a>
+              <a href="competences.html">Compétences</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400  data-[active=true]:after:w-full"
             >
-              <a href="/pages/realisations.html">Réalisations</a>
+              <a href="realisations.html">Réalisations</a>
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/apropos.html">A propos</a>  
+              <a href="apropos.html">A propos</a>  
             </li>
             <li
               class="relative after:content-[''] after:absolute after:-bottom-1 after:left-0 after:w-0 after:h-[2px] after:bg-indigo-900 after:transition-all after:duration-500 hover:after:w-3/4 dark:after:bg-orange-400"
             >
-              <a href="/pages/contact.html">Contact</a>
+              <a href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -192,7 +192,7 @@
                     d="M7 12.9c-2.84-.476-5-2.94-5-5.92v-1.5a.5.5 0 0 1 1 0v1.5c0 2.76 2.24 5 5 5s5-2.24 5-5v-1.5a.5.5 0 0 1 1 0v1.5c0 2.97-2.16 5.44-5 5.92v2.08h1.5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1H7z"
                   />
                 </svg> -->
-                <img src="/assets/images/rs2.avif" alt="" class="object-cover w-full h-full">
+                <img src="../assets/images/rs2.avif" alt="" class="object-cover w-full h-full">
               </div>
               <!-- texte illustration du projet (droite) -->
               <div class="w-[70%] max-md:w-[95%] max-md:flex max-md:flex-col max-md:items-center">
@@ -265,7 +265,7 @@
                     clip-rule="evenodd"
                   />
                 </svg> -->
-                <img src="/assets/images/finance1.avif" alt="" class="object-cover w-full h-full">
+                <img src="../assets/images/finance1.avif" alt="" class="object-cover w-full h-full">
               </div>
               <!-- texte illustration du projet (droite) -->
               <div class="w-[70%] max-md:w-[95%] max-md:flex max-md:flex-col max-md:items-center">
@@ -321,7 +321,7 @@
                   d="M8.54 9.58a5.6 5.6 0 0 0-1.09 1.19c-.64.92-.59 1.17-.9 1a.45.45 0 0 0-.34-.1c-.68.28.38 1.46 1.16 1c1.16-.91 1.13-1.88 1.63-2.61a.34.34 0 0 0-.46-.48m2.22 2.88q1.003-.027 2-.16a.34.34 0 0 0 .34-.34c.15-.94-3.81-.67-3.87-.17s1.37.65 1.53.67M8.2 14.51c-.59.9-.87 1.13-1.47 2.13a1.2 1.2 0 0 1-.26-.08a.3.3 0 1 0-.54.26c.129.287.328.538.58.73c1 .7 1.94-1.62 2.31-2.74a.345.345 0 0 0-.62-.3m4.8 2.5a.36.36 0 0 0 0-.49c-.21-.3-1.29-.39-1.53-.38a9.2 9.2 0 0 0-2.13.39c-.11.15-.16.27-.06.38s-.13.06 1.34.39a15.4 15.4 0 0 0 2.38-.29M23.86 3.22c-.59-1.78-2.94-.87-3.61.1a1.1 1.1 0 0 0-.19.61c-1.63.22-1.67 2.69-1.7 4.22c.07 2.21 0 2.83.43 2.79s.32-.4.63-2.73s.1-3 .65-3.56c.08 0 0 4.41.19 4.85c-.27 1.06-.45 6.38-.52 7.83q-.1.736-.06 1.48a3.58 3.58 0 0 0 1.51 2.09c.62.31 1-.28 1.21-.71a3.54 3.54 0 0 0 .82-2.38c0-2.34-.06-.65.2-8.48a6 6 0 0 0 .34-1.8c.13-1.31.41-3.39.1-4.31m-2.73.79a2.1 2.1 0 0 1 .94-.53c.54-.1.56-.15.66.06c.076.18.12.373.13.57a41 41 0 0 1-.17 4.83c-.09 0-.26.08-.32.08h-1.5c-.07-.58-.09.75.26-5.01m.28 15.64a2.7 2.7 0 0 1-.6-1c.08-2.62-.18-6.73 0-8.89q.922.09 1.85.06l-.47 6.19c-.1 2.74.01 2.39-.78 3.6z"
                 />
               </svg> -->
-                <img src="/assets/images/ia2.avif" alt="" class="object-cover w-full h-full">
+                <img src="../assets/images/ia2.avif" alt="" class="object-cover w-full h-full">
               </div>
               <!-- texte illustration du projet (droite) -->
               <div class="w-[70%] max-md:w-[95%] max-md:flex max-md:flex-col max-md:items-center">
@@ -636,13 +636,13 @@
     </footer>
 
     <!-- DARK MODE  -->
-    <script src="/assets/js/main.js"></script>
-    <script src="/assets/js/darkmobile.js"></script>
+    <script src="../assets/js/main.js"></script>
+    <script src="../assets/js/darkmobile.js"></script>
     <!-- aos  -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- aos init -->
-    <script src="/assets/js/aos.js"></script>
+    <script src="../assets/js/aos.js"></script>
     <!-- menu mobile  -->
-     <script src="/assets/js/menu-mobile.js"></script>
+     <script src="../assets/js/menu-mobile.js"></script>
   </body>
 </html>
